// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid plot all should plot grid 1`] = `
<g
  class="grids"
>
  <g
    class="hor-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="370"
      y2="370"
    />
  </g>
  <g
    class="hor-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="626"
      y2="626"
    />
    <line
      x1="20"
      x2="980"
      y1="562"
      y2="562"
    />
    <line
      x1="20"
      x2="980"
      y1="498"
      y2="498"
    />
    <line
      x1="20"
      x2="980"
      y1="434"
      y2="434"
    />
    <line
      x1="20"
      x2="980"
      y1="370"
      y2="370"
    />
    <line
      x1="20"
      x2="980"
      y1="306"
      y2="306"
    />
    <line
      x1="20"
      x2="980"
      y1="242"
      y2="242"
    />
    <line
      x1="20"
      x2="980"
      y1="178"
      y2="178"
    />
    <line
      x1="20"
      x2="980"
      y1="114"
      y2="114"
    />
  </g>
  <g
    class="ver-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="500"
      x2="500"
      y1="690"
      y2="50"
    />
  </g>
  <g
    class="ver-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="116"
      x2="116"
      y1="690"
      y2="50"
    />
    <line
      x1="212"
      x2="212"
      y1="690"
      y2="50"
    />
    <line
      x1="308"
      x2="308"
      y1="690"
      y2="50"
    />
    <line
      x1="404"
      x2="404"
      y1="690"
      y2="50"
    />
    <line
      x1="500"
      x2="500"
      y1="690"
      y2="50"
    />
    <line
      x1="596"
      x2="596"
      y1="690"
      y2="50"
    />
    <line
      x1="692"
      x2="692"
      y1="690"
      y2="50"
    />
    <line
      x1="788"
      x2="788"
      y1="690"
      y2="50"
    />
    <line
      x1="884"
      x2="884"
      y1="690"
      y2="50"
    />
  </g>
</g>
`;

exports[`Grid plot horizontal should not plot vertical grid 1`] = `
<g
  class="grids"
>
  <g
    class="hor-major-Grid"
    fill-opacity="0"
    stroke="#444"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="370"
      y2="370"
    />
  </g>
  <g
    class="hor-minor-Grid"
    fill-opacity="0"
    stroke="#eee"
    stroke-opacity="1"
    stroke-width="1"
  >
    <line
      x1="20"
      x2="980"
      y1="626"
      y2="626"
    />
    <line
      x1="20"
      x2="980"
      y1="562"
      y2="562"
    />
    <line
      x1="20"
      x2="980"
      y1="498"
      y2="498"
    />
    <line
      x1="20"
      x2="980"
      y1="434"
      y2="434"
    />
    <line
      x1="20"
      x2="980"
      y1="370"
      y2="370"
    />
    <line
      x1="20"
      x2="980"
      y1="306"
      y2="306"
    />
    <line
      x1="20"
      x2="980"
      y1="242"
      y2="242"
    />
    <line
      x1="20"
      x2="980"
      y1="178"
      y2="178"
    />
    <line
      x1="20"
      x2="980"
      y1="114"
      y2="114"
    />
  </g>
  <g
    class="ver-major-Grid"
  />
  <g
    class="ver-minor-Grid"
  />
</g>
`;
